# parity-constrained-facility

./: .gitignore  CMakeLists.txt  README.md
include/: LPRelaxation.h  ProbData.h  blossom5.h  blossom5_GEOM.h  dbg.h  mcpm.h  options.h  pcfl.h  pcfl_callback.h  pcfl_flag_manager.h  pcfl_model.h  pcfl_utility.h
res/: README.md  result1.txt  result_impl3_fix.txt  simple_in_0.txt
res/barrier/output/: parity_i300_1.plc.0  parity_i300_1.plc.1  parity_i300_1.plc.diff  parity_i300_16.plc.0  parity_i300_16.plc.1  parity_i300_16.plc.diff  parity_i300_3.plc.0  parity_i300_3.plc.1  parity_i300_3.plc.diff  result.txt
res/exam-input/: parity_i300_1.plc  parity_i300_10.plc  parity_i300_11.plc  parity_i300_12.plc  parity_i300_13.plc  parity_i300_14.plc  parity_i300_15.plc  parity_i300_16.plc  parity_i300_17.plc  parity_i300_18.plc  parity_i300_19.plc  parity_i300_2.plc  parity_i300_20.plc  parity_i300_3.plc  parity_i300_4.plc  parity_i300_5.plc  parity_i300_6.plc  parity_i300_7.plc  parity_i300_8.plc  parity_i300_9.plc
res/exam-output/: parity_i300_1.plc  parity_i300_10.plc  parity_i300_12.plc  parity_i300_13.plc  parity_i300_14.plc  parity_i300_15.plc  parity_i300_16.plc  parity_i300_17.plc  parity_i300_18.plc  parity_i300_19.plc  parity_i300_2.plc  parity_i300_20.plc  parity_i300_3.plc  parity_i300_4.plc  parity_i300_5.plc  parity_i300_6.plc  parity_i300_7.plc  parity_i300_8.plc  parity_i300_9.plc
res/exam-output2/: parity_i300_1.plc  parity_i300_10.plc  parity_i300_14.plc  parity_i300_16.plc  parity_i300_17.plc  parity_i300_18.plc  parity_i300_19.plc  parity_i300_2.plc  parity_i300_20.plc  parity_i300_3.plc  parity_i300_4.plc  parity_i300_6.plc  parity_i300_7.plc  parity_i300_8.plc  parity_i300_9.plc  result0.txt  result1.txt  result2.txt
res/exam-sol/: parity_i300_11.plc  parity_i300_12.plc  parity_i300_13.plc  parity_i300_15.plc  parity_i300_16.plc  parity_i300_5.plc
res/results/: result1.txt  tmp.csv
res/results/default/: 300-300.txt  500-500.txt  700-700.txt
res/results/impl1-p/: 300-300.txt  500-500.txt  700-700.txt
res/results/impl3/: 300-300.csv  300-300.txt  300-300_coord.txt  300-300_raw.txt  300-300_speedup.txt  500-500.csv  500-500.txt  500-500_incorrect.txt  500-500_raw.txt  700-700.csv  700-700.txt  700-700_010_raw.txt  700-700_011_raw.txt  700-700_012_raw.txt  700-700_incorrect_list.txt  700-700_raw.txt  700-700_raw2.txt
res/results/impl3-1/: 300-300.txt  500-500.txt  700-700.txt
res/results/impl3-p/: 300-300.csv  300-300.txt  500-500.csv  500-500.txt  700-700.csv  700-700.txt
res/results/impl3-p-a1-log/: 300-300.txt  500-500.txt  700-700.txt
res/results/impl3-p-a2-log/: 300-300.txt  500-500.txt  700-700.txt
res/results/impl3-p-a3/: 300-300.txt  500-500.txt  700-700.txt
res/results/impl3-p-a3-th2/: 300-300.txt  500-500.txt  700-700.txt
res/test/: note.txt  run.sh
res/test/0/: correct.txt  incorrect.txt  j2t2.txt  j4t1.txt  j4t2.txt  t1.txt  t2.txt  t3.txt  t4.txt  t5.txt  t6.txt  t7.txt  t8.txt
res/test/1/: correct.txt  incorrect.txt  j2t2.txt  j4t1.txt  j4t2.txt  t1.txt  t2.txt  t3.txt  t4.txt  t5.txt  t6.txt  t7.txt  t8.txt
res/test/10/: correct.txt  incorrect.txt  j2t2.txt  j4t1.txt  j4t2.txt  t1.txt  t2.txt  t3.txt  (+5 more)
scripts/: _test1.sh  check.py  check1.py  coord.py  csv.sh  recalc_result.py  rename1.sh  test-list.sh  test-pcfl-jiho-1-barrier.sh  test-pcfl-jiho-1.sh  test.py  test1-1.sh  test1-2.sh  test1-all.sh  test1-d.sh  test1.sh  testsd.sh  total_time.sh  utils.py
src/: LPRelaxation.cpp  ProbData.cpp  dbg.cpp  main.cpp  pcfl-jiho-1.cpp  pcfl_ae_c++.cpp  pcfl_assign.cpp  pcfl_assign2.cpp  pcfl_callback.cpp  pcfl_flag_manager.cpp  pcfl_hw.cpp  pcfl_impl2.cpp  pcfl_impl3.cpp  pcfl_impl4.cpp  pcfl_jiho.cpp  pcfl_model.cpp  pcfl_utility.cpp
src/assign/: assign.h  common.cpp  frontend.cpp  method1.cpp  method2.cpp  method3.cpp
src/blossom5-v2.05.src/: CMakeLists.txt
src/impl3/: ThreadPool.cpp  callback.cpp  common.h  model.cpp
src/mcpm/: CMakeLists.txt
src/t-join/: tjoin.cpp  tjoin.h
(+8511 files in other folders)
